data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_856.wast
;; 7. **Test Description**: Introduce `nop` instructions in a function that uses `br` or `br_if` to an outer block and calls an imported function within the block.    - **Constraint**: Validate `br` or `br_if` transitions through `nop` correctly.    - **Relates to**: Ensures branching instructions respect cross-module boundaries with `nop`.

(assert_invalid
  (module 
    (func (result i32)
      (block (result i32)
        (call $imported_function)
        (nop)
        (br 0)
      )
    )
    (import "env" "imported_function" (func $imported_function (result i32)))
  )
  "type mismatch"
)